<resources>
    <string name="app_name">Petqper</string>
    <string name="username_email">Username or Email</string>
    <string name="password">Password</string>
    <string name="notmemberyet">Not a member yet?</string>
    <string name="registerhere">Register Here</string>
    <string name="fullname">Full name</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="registerButton">Register now</string>
    <string name="loginButton">Login</string>
    <string name="logo">logo</string>
    <string name="prev_page">Prev Page</string>
    <string name="social">Social</string>
    <string name="booking">Booking</string>
    <string name="hotel">My Hotel</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome</string>
    <string name="name">Charlotte</string>
</resources>